# esercizi_prog_1

./: .gitignore  14_1.c  14_3.c  15_2.c  15_3.c  15_9_matrici_stack.c  16_3_matrici_heap.c  22_1.c  BubbleSort.c  CMakeLists.txt  H13_2.c  H91.c  H92.c  InsertionSort.c  PassaggioValoreIndirizzo.c  SelectionSort.c  \mnt\c\c\file.txt  file.txt  h104.c  h105.c  h106.c  h107.c  h108.c  h109.c  h11_1.c  h11_2.c  h11_3.c  h11_4.c  h11_5.c  h11_6.c  h11_7.c  h12_1.c  h12_2.c  h13_1.c  h13_3.c  h14_2.c  h15_1.c  h15_4.c  h16_1.c  h16_2.c  (+13 more)
23_main_args/: es_main_args.c  main_args.c
Liste/common/: data.c  data.h  double_ref_node.h  single_ref_node.h
Liste/liste_mia_implementazione/: data_nodo.h  impl.c  single_node.h
Liste/lists/double_linked_lists/: impl.c
Liste/lists/single_linked_lists/: single_linked_list.c
Liste_pile_code/esercizi/: link.txt
Liste_pile_code/esercizi/1/: main.c  reverse.c
Liste_pile_code/esercizi/double_list/: 1.c  2.c  3.c
Liste_pile_code/esercizi/single_linked_list/12/: 12.c
Liste_pile_code/esercizi/single_linked_list/3/: 3.c
Liste_pile_code/file_Messina/common/: data.c  data.h  double_ref_node.h  single_ref_node.h
Liste_pile_code/file_Messina/lists/: List_readme.txt
Liste_pile_code/file_Messina/lists/double_linked_lists/: double_linked_list.c  double_linked_list.h
Liste_pile_code/file_Messina/queue/by_list/: main.c  (+2 more)
Liste_pile_code/file_Messina/stack/: Stack_readme.txt  stack.c  stack.h
Liste_pile_code/studio/: double_linked_list_main.c  main.c  single_linked_list_main.c
Liste_pile_code/studio/common/: data.c  data.h  double_linked_list.c  double_linked_list.h  double_ref_node.h  single_linked_list.c  single_linked_list.h  single_ref_node.h
esFun/: 1.c
file/: 1.c  copia_testo_riga_per_riga.c  scrittura.c
puntatori_svolti/: 1.c  2.c
test_itinere/: main.c  modulo.c
(+6 files in other folders)
